Uml 2105 downtime banner (#1384)
* Change the way the banner looks, and wrap the translation navigation (and back button) on pages with a clearfix

* Language extraction

* Added banner with downtime to dashboard and blank-dashboard templates

* Add welsh translations and fixup po/mo files

* Add banner to view side with language extract

* Add final warning to bottom of triage page.

--- a/service-front/app/src/Actor/templates/actor/lpa-blank-dashboard.html.twig
+++ b/service-front/app/src/Actor/templates/actor/lpa-blank-dashboard.html.twig
@@ -6,7 +6,11 @@
     <div class="govuk-width-container">
         {{ include('@partials/account-bar.html.twig') }}
 
-        {{ include('@partials/welsh-switch.html.twig') }}
+        <div class="govuk-clearfix">
+            {{ include('@partials/welsh-switch.html.twig') }}
+        </div>
+
+        {{ include('@actor/partials/lpas-registered-after.html.twig') }}
 
         <main class="govuk-main-wrapper" id="main-content" role="main">
 
