--- a/service-front/app/src/Actor/templates/actor/home-page.html.twig
+++ b/service-front/app/src/Actor/templates/actor/home-page.html.twig
@@ -6,8 +6,12 @@
 
 {% block content %}
 <div class="govuk-width-container">
+
+    <div class="govuk-clearfix">
+        {{ include('@partials/welsh-switch.html.twig') }}
+    </div>
+
     {{ include('@actor/partials/lpas-registered-after.html.twig') }}
-    {{ include('@partials/welsh-switch.html.twig') }}
 
         <main class="govuk-main-wrapper" id="main-content" role="main">
             <div class="govuk-grid-row">
@@ -49,9 +53,19 @@
                         </p>
                     {% endif %}
 
+                    <div class="govuk-warning-text">
+                        <span class="govuk-warning-text__icon" aria-hidden="true">!</span>
+                        <strong class="govuk-warning-text__text">
+                            <span class="govuk-warning-text__assistive">{% trans %}Warning{% endtrans %}</span>
+                            {% trans %}This service will be unavailable between 3pm on Friday 4 March and 6pm on Sunday 6 March 2022.{% endtrans %}
+                        </strong>
+                        <p class="govuk-body-m govuk-!-padding-left-7">{% trans %}If you need to use your lasting power of attorney during this time you can still use the paper LPA document.{% endtrans %}</p>
+                    </div>
+
                     <button data-prevent-double-click="true" type="submit" class="govuk-button">{% trans %}Continue{% endtrans %}</button>
 
                     {{ govuk_form_close() }}
+
                 </div>
             </div>
         </main>
