--- a/service-front/app/src/Actor/templates/actor/home-page.html.twig
+++ b/service-front/app/src/Actor/templates/actor/home-page.html.twig
@@ -5,17 +5,18 @@
 {% block service_name %}{% trans %}Use a lasting power of attorney{% endtrans %}{% endblock %}
 
 {% block content %}
-<div class="govuk-width-container">
+    <div class="govuk-width-container">
 
-    <div class="govuk-clearfix">
-        {{ include('@partials/welsh-switch.html.twig') }}
-    </div>
-
-    {{ include('@actor/partials/lpas-registered-after.html.twig') }}
+        <div class="govuk-clearfix">
+            {{ include('@partials/welsh-switch.html.twig') }}
+        </div>
 
         <main class="govuk-main-wrapper" id="main-content" role="main">
             <div class="govuk-grid-row">
                 <div class="govuk-grid-column-two-thirds">
+
+                    {{ include('@actor/partials/lpas-registered-after.html.twig') }}
+
                     {{ govuk_error_summary(form) }}
                     {{ govuk_form_open(form) }}
 
@@ -46,21 +47,12 @@
                     <p class="govuk-body">{% trans %}If you're named on more than one LPA, you can add all those LPAs to your account.{% endtrans %}</p>
 
                     {% if feature_enabled('allow_older_lpas') %}
-                        <p class="govuk-body">
+                        <p class="govuk-inset-text">
                             {% trans %}
                                 Adding LPAs registered between 1 January 2016 and 31 August 2019 is on a trial basis only, and may be paused temporarily. However, once your LPA is added you will always be able to use it in this service.
                             {% endtrans %}
                         </p>
                     {% endif %}
-
-                    <div class="govuk-warning-text">
-                        <span class="govuk-warning-text__icon" aria-hidden="true">!</span>
-                        <strong class="govuk-warning-text__text">
-                            <span class="govuk-warning-text__assistive">{% trans %}Warning{% endtrans %}</span>
-                            {% trans %}This service will be unavailable between 3pm on Friday 4 March and 6pm on Sunday 6 March 2022.{% endtrans %}
-                        </strong>
-                        <p class="govuk-body-m govuk-!-padding-left-7">{% trans %}If you need to use your lasting power of attorney during this time you can still use the paper LPA document.{% endtrans %}</p>
-                    </div>
 
                     <button data-prevent-double-click="true" type="submit" class="govuk-button">{% trans %}Continue{% endtrans %}</button>
 
