--- a/service-front/app/src/Actor/templates/actor/form-error-messages.html.twig
+++ b/service-front/app/src/Actor/templates/actor/form-error-messages.html.twig
@@ -43,6 +43,8 @@
 {% trans %}Date of birth must include a year{% context %}error{% notes %}Add LPA{% endtrans %}
 {% trans %}Date of birth must be in the past{% context %}error{% notes %}Add LPA{% endtrans %}
 {% trans %}Check your date of birth is correct - you cannot be an attorney or donor if you’re under 18{% context %}error{% notes %}Add LPA{% endtrans %}
+{% trans %}Select if you have an activation key to add an LPA{% context %}error{% notes %}Triage page{% endtrans %}
+
 
 {# Add older lpa #}
 {% trans %}Enter the LPA reference number{% context %}error{% notes %}Add Older LPA{% endtrans %}
