--- a/service-front/app/src/Actor/templates/actor/request-activation-key/before-requesting-activation-key-info.html.twig
+++ b/service-front/app/src/Actor/templates/actor/request-activation-key/before-requesting-activation-key-info.html.twig
@@ -1,6 +1,6 @@
 {% extends '@actor/layout.html.twig' %}
 
-{% block html_title %}{% trans %}Before you begin{% endtrans %} - {{ parent() }}{% endblock %}
+{% block html_title %}{% trans %}Ask for an activation key{% endtrans %} - {{ parent() }}{% endblock %}
 
 {% block content %}
     <div class="govuk-width-container">
@@ -15,7 +15,7 @@
             <div class="govuk-grid-row">
                 <div class="govuk-grid-column-two-thirds">
 
-                    <h1 class="govuk-heading-xl">{% trans %}Before you begin{% endtrans %}</h1>
+                    <h1 class="govuk-heading-xl">{% trans %}Ask for an activation key{% endtrans %}</h1>
 
                     <p class="govuk-body">{% trans %}You can only ask for an activation key if:{% endtrans %}</p>
 
