--- a/service-front/app/src/Actor/templates/actor/request-activation-key/your-name.html.twig
+++ b/service-front/app/src/Actor/templates/actor/request-activation-key/your-name.html.twig
@@ -1,6 +1,6 @@
 {% extends '@actor/layout.html.twig' %}
 
-{% block html_title %}{% trans %}Your details{% endtrans %} - {{ parent() }}{% endblock %}
+{% block html_title %}{% trans %}What is your name?{% endtrans %} - {{ parent() }}{% endblock %}
 
 {% block content %}
     <div class="govuk-width-container">
@@ -19,7 +19,7 @@
             <div class="govuk-grid-row">
                 <div class="govuk-grid-column-two-thirds">
 
-                    <h1 class="govuk-heading-xl">{% trans %}Your details{% endtrans %}</h1>
+                    <h1 class="govuk-heading-xl">{% trans %}What is your name?{% endtrans %}</h1>
 
                     {{ govuk_form_open(form) }}
 
