--- a/service-front/app/src/Actor/templates/actor/cannot-find-lpa.html.twig
+++ b/service-front/app/src/Actor/templates/actor/cannot-find-lpa.html.twig
@@ -18,7 +18,7 @@
 
                         <p class="govuk-body-l">{% trans %}LPA reference number: {% endtrans %} {{ lpa_reference_number }} </p>
 
-                        <h2 class="govuk-heading-m">{% trans %}Did you give us the right LPA reference number?{% endtrans %}</h2>
+                        <h2 class="govuk-heading-m">{% trans %}Check you entered the right LPA reference number{% endtrans %}</h2>
 
                         <p class="govuk-body">
                             {% trans %}
