--- a/service-front/app/src/Common/templates/partials/full-lpa-display.html.twig
+++ b/service-front/app/src/Common/templates/partials/full-lpa-display.html.twig
@@ -151,6 +151,22 @@
                     </dd>
                 </dl>
 
+                {% for tc in lpa.trustCorporations %}
+                    {% if tc.systemStatus %}
+                        <h3 class="govuk-heading-m">{% trans%}Trust corporation {% endtrans %}</h3>
+                        <dl class="govuk-summary-list govuk-summary-list--no-border">
+                            <div class="govuk-summary-list__row">
+                                <dt class="govuk-summary-list__key">{% trans %}Name{% endtrans %}</dt>
+                                <dd class="govuk-summary-list__value">{{ lpa.TrustCorporations[0].CompanyName() }} {{ "(Trust corporation)" }}</dd>
+                            </div>
+                            <div class="govuk-summary-list__row">
+                                <dt class="govuk-summary-list__key">{% trans %}Address{% endtrans %}</dt>
+                                <dd class="govuk-summary-list__value">{{ actor_address(lpa.trustCorporations[0]) }}</dd>
+                            </div>
+                        </dl>
+                    {% endif %}
+                {% endfor %}
+
                 {% for attorney in lpa.attorneys %}
 
                     <h3 class="govuk-heading-m">{% trans count loop.index with {'%attorneyOrdinal%': loop.index | ordinal} %}%attorneyOrdinal% attorney|%attorneyOrdinal% attorney{% endtrans %}</h3>
