--- a/service-front/app/src/Common/templates/layout/default.html.twig
+++ b/service-front/app/src/Common/templates/layout/default.html.twig
@@ -40,37 +40,46 @@
 </head>
 
 <body class="govuk-template__body ">
+
+{% set service_name = ((application == 'actor') ? 'Use' : 'View') ~ ' a lasting power of attorney' %}
+
 <a href="#main-content" class="govuk-skip-link">{% trans %}Skip to main content{% endtrans %}</a>
 {% if application == 'actor' %}
     {{ include('@actor/partials/use-session-dialog.html.twig') }}
 {% endif %}
 
 <form>
-<div class="cookie-banner govuk-width-container" role="region" aria-label="cookie banner">
-    <div class="govuk-grid-row">
-        <div class=" govuk-grid-column-two-thirds">
-            <div class="cookie-banner__message">
-                <h2 class="govuk-heading-m">{% trans %}Tell us whether you accept cookies{% endtrans %}</h2>
-                <p class="govuk-body">{% trans %}GOV.UK uses cookies which are essential for the site to work. We also use non-essential cookies to help us
-                    improve government digital services. Any data collected is anonymised.{% endtrans %}</p>
+    <div class="govuk-cookie-banner " data-nosnippet role="region" aria-label="Cookies on {{ service_name }}">
+        <div class="govuk-cookie-banner__message govuk-width-container">
+
+            <div class="govuk-grid-row">
+                <div class="govuk-grid-column-two-thirds">
+                    <h2 class="govuk-cookie-banner__heading govuk-heading-m">Cookies on {{ service_name }}</h2>
+
+                    <div class="govuk-cookie-banner__content">
+                        <p class="govuk-body">We use some essential cookies to make this service work.</p>
+                        <p class="govuk-body">We’d also like to use analytics cookies so we can understand how you use the service and make improvements.</p>
+                    </div>
+                </div>
             </div>
-            <div class="cookie-banner__buttons">
-                <div class="cookie-banner__button cookie-banner__button-accept govuk-grid-column-full govuk-grid-column-one-half-from-desktop govuk-!-padding-left-0">
-                    <button class="govuk-button button--inline" name="accept-all-cookies" type="button" role="button">{% trans %}Accept all cookies{% endtrans %}</button>
-                </div>
-                <div class="cookie-banner__button govuk-grid-column-full govuk-grid-column-one-half-from-desktop govuk-!-padding-left-0">
-                    <a href="{{ path('cookies') }}" class="govuk-button govuk-button--secondary button--inline" name="set-cookie-preferences" role="button">{% trans %}Set cookie preferences{% endtrans %}</a>
-                </div>
+
+            <div class="govuk-button-group">
+                <button value="accept" type="button" name="cookies" class="govuk-button" data-module="govuk-button">
+                    Accept analytics cookies
+                </button>
+                <button value="reject" type="button" name="cookies" class="govuk-button" data-module="govuk-button">
+                    Reject analytics cookies
+                </button>
+                <a class="govuk-link" href="{{ path('cookies') }}">View cookies</a>
             </div>
         </div>
     </div>
-</div>
 </form>
 
 <header class="govuk-header " role="banner" data-module="govuk-header">
     <div class="govuk-header__container govuk-width-container">
         <div class="govuk-header__logo">
-            <a href="#" class="govuk-header__link govuk-header__link--homepage">
+            <a href="https://www.gov.uk" class="govuk-header__link govuk-header__link--homepage">
         <span class="govuk-header__logotype">
           <!--[if gt IE 8]><!-->
           <svg aria-hidden="true" focusable="false" class="govuk-header__logotype-crown" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 132 97" height="30" width="36">
@@ -90,11 +99,7 @@
 
             <a href="{{ path('home') }}" class="govuk-header__link govuk-header__link--service-name">
                 {% block service_name %}
-                    {% if application == "actor" %}
-                        {% trans %}Use a lasting power of attorney{% endtrans %}
-                    {% elseif application == "viewer" %}
-                        {% trans %}View a lasting power of attorney{% endtrans %}
-                    {% endif %}
+                    {{ ((application == 'actor') ? 'Use' : 'View') ~ ' a lasting power of attorney' }}
                 {% endblock %}
             </a>
 
