Unfortunately large commit that should probably have not happened
Add authorisation middleware that pulls claims from a passed JWT and makes it available in the request context.

Pull configuration out to the top level main.go and ensure it's passed down as method parameters as it should be.

Utilise AWS SDK v2 and make changes to allow context usage with that.

--- a/service-admin/web/templates/result_actor.partial.gohtml
+++ b/service-admin/web/templates/result_actor.partial.gohtml
@@ -34,7 +34,7 @@
       <dd class="govuk-summary-list__value">
         <ul class="govuk-list">
         {{ range .LPAs }}
-          <li>{{ .SiriusUID }}</li>
+          <li>{{ .SiriusUID }} {{ if .ActivateBy }}<strong class="govuk-tag govuk-tag--grey">not activated</strong>{{ end }}</li>
         {{ end }}
         </ul>
       </dd>
