--- a/service-front/app/src/Common/templates/partials/full-lpa-display.html.twig
+++ b/service-front/app/src/Common/templates/partials/full-lpa-display.html.twig
@@ -152,7 +152,6 @@
                 </dl>
 
                 {% for attorney in lpa.attorneys %}
-
                     <h3 class="govuk-heading-m">{% trans count loop.index with {'%attorneyOrdinal%': loop.index | ordinal} %}%attorneyOrdinal% attorney|%attorneyOrdinal% attorney{% endtrans %}</h3>
 
                     <dl class="govuk-summary-list govuk-summary-list--no-border">
@@ -169,8 +168,25 @@
                             <dd class="govuk-summary-list__value">{{ actor_address(attorney) }}</dd>
                         </div>
                     </dl>
-
                 {% endfor %}
+
+                {% for tc in lpa.trustCorporations %}
+                    {% set i = loop.index + lpa.attorneys | length %}
+
+                    <h3 class="govuk-heading-m">{% trans count loop.index with {'%attorneyOrdinal%': i | ordinal } %}%attorneyOrdinal% attorney|%attorneyOrdinal% attorney{% endtrans %}</h3>
+
+                    <dl class="govuk-summary-list govuk-summary-list--no-border">
+                        <div class="govuk-summary-list__row">
+                            <dt class="govuk-summary-list__key">{% trans %}Name{% endtrans %}</dt>
+                            <dd class="govuk-summary-list__value">{{ tc.companyName }}</dd>
+                        </div>
+                        <div class="govuk-summary-list__row">
+                            <dt class="govuk-summary-list__key">{% trans %}Address{% endtrans %}</dt>
+                            <dd class="govuk-summary-list__value">{{ actor_address(tc) }}</dd>
+                        </div>
+                    </dl>
+                {% endfor %}
+
             </div>
         </div>
 
