--- a/service-front/app/src/Common/templates/layout/default.html.twig
+++ b/service-front/app/src/Common/templates/layout/default.html.twig
@@ -54,23 +54,23 @@
 
             <div class="govuk-grid-row">
                 <div class="govuk-grid-column-two-thirds">
-                    <h2 class="govuk-cookie-banner__heading govuk-heading-m">Cookies on {{ service_name }}</h2>
+                    <h2 class="govuk-cookie-banner__heading govuk-heading-m"> {% trans with { '%service_name%' : service_name|trans } %}Cookies on %service_name%{% endtrans %}</h2>
 
                     <div class="govuk-cookie-banner__content">
-                        <p class="govuk-body">We use some essential cookies to make this service work.</p>
-                        <p class="govuk-body">We’d also like to use analytics cookies so we can understand how you use the service and make improvements.</p>
+                        <p class="govuk-body">{% trans %}We use some essential cookies to make this service work.{% endtrans %}</p>
+                        <p class="govuk-body">{% trans %}We’d also like to use analytics cookies so we can understand how you use the service and make improvements.{% endtrans %}</p>
                     </div>
                 </div>
             </div>
 
             <div class="govuk-button-group">
                 <button value="accept" type="button" name="cookies" class="govuk-button" data-module="govuk-button">
-                    Accept analytics cookies
+                    {% trans %}Accept analytics cookies{% endtrans %}
                 </button>
                 <button value="reject" type="button" name="cookies" class="govuk-button" data-module="govuk-button">
-                    Reject analytics cookies
+                    {% trans %}Reject analytics cookies{% endtrans %}
                 </button>
-                <a class="govuk-link" href="{{ path('cookies') }}">View cookies</a>
+                <a class="govuk-link" href="{{ path('cookies') }}">{% trans %}View cookies{% endtrans %}</a>
             </div>
         </div>
     </div>
@@ -99,7 +99,8 @@
 
             <a href="{{ path('home') }}" class="govuk-header__link govuk-header__link--service-name">
                 {% block service_name %}
-                    {{ ((application == 'actor') ? 'Use' : 'View') ~ ' a lasting power of attorney' }}
+                    {% set service_name = ((application == 'actor') ? 'Use' : 'View') ~ ' a lasting power of attorney' %}
+                    {{ service_name | trans }}
                 {% endblock %}
             </a>
 
