--- a/service-front/web/src/scss/lpa.scss
+++ b/service-front/web/src/scss/lpa.scss
@@ -3,6 +3,7 @@
 @import "../../node_modules/govuk-frontend/govuk/helpers/all";
 @import "../../node_modules/govuk-frontend/govuk/objects/all";
 
+@import "ulpa-colours";
 @import 'lpa-account-menu';
 @import 'govuk-panel';
 @import 'lpa-typography';
