UML-1917 Make dashboard colours WCAG compliant (#1445)
* make badges and remove lpa text larger and a darker red to aid wcag contrast standards

* move colour change from desktop media query

--- a/service-front/web/src/scss/_lpa-ticket-panel.scss
+++ b/service-front/web/src/scss/_lpa-ticket-panel.scss
@@ -1,12 +1,17 @@
 .moj-ticket-panel {
 
   .lpa-account-delete {
-    color: govuk-colour('red');
+    color: $higher-contrast-red;
+  }
+
+  .moj-badge--red {
+    color: $higher-contrast-red;
+    border-color: $higher-contrast-red;
   }
 
   @include govuk-media-query($from: desktop) {
 
-    .moj-ticket-panel__row {
+    &__row {
       display: flex;
       justify-content: space-between;
 
