--- a/service-admin/web/templates/header.partial.gohtml
+++ b/service-admin/web/templates/header.partial.gohtml
@@ -13,7 +13,7 @@
         <nav class="moj-header__navigation" aria-label="Account navigation">
           <ul class="moj-header__navigation-list">
             <li class="moj-header__navigation-item">
-              <a class="moj-header__navigation-link" href="/" aria-current="page">Sign out</a>
+              <a class="moj-header__navigation-link" href="/logout" aria-current="page">Sign out</a>
             </li>
           </ul>
         </nav>
