--- a/service-front/web/src/scss/_lpa-ticket-panel.scss
+++ b/service-front/web/src/scss/_lpa-ticket-panel.scss
@@ -1,12 +1,12 @@
 .moj-ticket-panel {
 
   .lpa-account-delete {
-    color: $higher-contrast-red;
+    color: govuk-shade(govuk-colour("red"), 20);
   }
 
   .moj-badge--red {
-    color: $higher-contrast-red;
-    border-color: $higher-contrast-red;
+    color: govuk-shade(govuk-colour("red"), 20);
+    border-color: govuk-shade(govuk-colour("red"), 20);
   }
 
   @include govuk-media-query($from: desktop) {
