--- a/service-front/app/src/Common/templates/common/cookies.html.twig
+++ b/service-front/app/src/Common/templates/common/cookies.html.twig
@@ -46,12 +46,7 @@
                 <tr class="govuk-table__row">
                     <td class="govuk-table__cell">cookie_policy</td>
                     <td class="govuk-table__cell">Saves your cookie consent settings</td>
-                    <td class="govuk-table__cell">1 month</td>
-                </tr>
-                <tr class="govuk-table__row">
-                    <td class="govuk-table__cell">seen_cookie_message</td>
-                    <td class="govuk-table__cell">Tells us whether you have seen the cookie banner</td>
-                    <td class="govuk-table__cell">1 month</td>
+                    <td class="govuk-table__cell">1 year</td>
                 </tr>
                 <tr class="govuk-table__row">
                     <td class="govuk-table__cell">session</td>
@@ -99,6 +94,29 @@
                 <li>{% trans %}the pages you visit on the service and how long you spend on them{% endtrans %}</li>
                 <li>{% trans %}any errors you see while using the service{% endtrans %}</li>
             </ul>
+
+            <table class="govuk-table">
+                <caption class="govuk-visually-hidden">Analytics cookies</caption>
+                <thead class="govuk-table__head">
+                <tr class="govuk-table__row">
+                    <th class="govuk-table__header">Name</th>
+                    <th class="govuk-table__header">Purpose</th>
+                    <th class="govuk-table__header">Expires</th>
+                </tr>
+                </thead>
+                <tbody class="govuk-table__body">
+                <tr class="govuk-table__row">
+                    <td class="govuk-table__cell">_ga</td>
+                    <td class="govuk-table__cell">Checks if you’ve visited the service before. This helps us count how many people visit the service.</td>
+                    <td class="govuk-table__cell">2 years</td>
+                </tr>
+                <tr class="govuk-table__row">
+                    <td class="govuk-table__cell">_gid</td>
+                    <td class="govuk-table__cell">Tells us how you got to the service and how you use it. This helps us understand how well the service is working.</td>
+                    <td class="govuk-table__cell">24 hours</td>
+                </tr>
+                </tbody>
+            </table>
 
             <div class="govuk-form-group">
                 <fieldset class="govuk-fieldset" aria-describedby="changed-name-hint">
