--- a/service-front/app/src/Common/templates/common/cookies.html.twig
+++ b/service-front/app/src/Common/templates/common/cookies.html.twig
@@ -1,4 +1,4 @@
-{% extends '@layout/default.html.twig' %}
+{% extends '@actor/layout.html.twig' %}
 
 {% block html_title %}{% trans %}Cookies{% endtrans %} - {{ block('service_name') }} - {{ parent() }}{% endblock %}
 
@@ -12,6 +12,7 @@
         </div>
 
         <main class="govuk-main-wrapper" id="main-content" role="main">
+            {{ include('@actor/partials/flash-message.html.twig', {flash_obj: flash, flash_key:'Common\\Handler\\CookiesPageHandler::COOKIES_SET_FLASH_MSG'}) }}
 
             <h1 class="govuk-heading-xl">{% trans %}Cookies{% endtrans %}</h1>
             <p class="govuk-body">{% trans %}Cookies are small files saved on your phone, tablet or computer when you visit a website.{% endtrans %}</p>
