the home page still needs to have the banner but with down for  maintenance message removed

--- a/service-front/app/src/Actor/templates/actor/home-page.html.twig
+++ b/service-front/app/src/Actor/templates/actor/home-page.html.twig
@@ -14,7 +14,9 @@
         <main class="govuk-main-wrapper" id="main-content" role="main">
             <div class="govuk-grid-row">
                 <div class="govuk-grid-column-two-thirds">
-                    
+
+                    {{ include('@actor/partials/lpas-registered-after.html.twig') }}
+
                     {{ govuk_error_summary(form) }}
                     {{ govuk_form_open(form) }}
 
