--- a/service-front/app/src/Actor/templates/actor/partials/lpas-registered-after.html.twig
+++ b/service-front/app/src/Actor/templates/actor/partials/lpas-registered-after.html.twig
@@ -8,6 +8,8 @@
         <p class="govuk-notification-banner__heading">
         {% if feature_enabled('allow_older_lpas') %}
             {% trans %}You can only use this service if your LPA was registered on or after 1 January 2016.{% endtrans %}
+        {% else %}
+            {% trans %}You can only use this service if your LPA was registered on or after 1 September 2019.{% endtrans %}
         {%  endif %}
         </p>
     </div>
