--- a/service-front/app/src/Actor/templates/actor/add-lpa/lpa-reference-number.html.twig
+++ b/service-front/app/src/Actor/templates/actor/add-lpa/lpa-reference-number.html.twig
@@ -1,6 +1,6 @@
 {% extends '@actor/layout.html.twig' %}
 
-{% block html_title %}{% trans %}Add a lasting power of attorney{% endtrans %} - {{ parent() }} {% endblock %}
+{% block html_title %}{% trans %}What is the LPA reference number?{% endtrans %} - {{ parent() }} {% endblock %}
 
 {% block content %}
 <div class="govuk-width-container">
@@ -8,51 +8,20 @@
     {{ include('@partials/welsh-switch.html.twig') }}
 
     <div role="navigation" aria-labelledby="back-link-navigation">
-        <a href="{{ feature_enabled('use_older_lpa_journey') ? path('lpa.add') : path('lpa.dashboard') }}" class="govuk-back-link" id="back-link-navigation">{% trans %}Back{% endtrans %}</a>
+        <a href="{{ path(back) }}" class="govuk-back-link" id="back-link-navigation">{% trans %}Back{% endtrans %}</a>
     </div>
 
     <main class="govuk-main-wrapper" id="main-content" role="main">
 
         <div class="govuk-grid-row">
-
             <div class="govuk-grid-column-two-thirds">
-
-                {{ govuk_error_summary(form) }}
-
-                <h1 class="govuk-heading-xl">{% trans %}Add a lasting power of attorney{% endtrans %}</h1>
+                <h1 class="govuk-heading-xl" id="ref_number_heading">{% trans %}What is the LPA reference number?{% endtrans %}</h1>
 
                 {{ govuk_form_open(form) }}
 
                     {{ govuk_form_element(form.get('__csrf')) }}
 
-                    <p class="govuk-body">{% trans %}The donor and each of the attorneys will have their own activation key. The activation key and date of birth must be for the same person.{% endtrans %}</p>
-
-                    {{ govuk_form_element(form.get('passcode'), {
-                        'label': 'Your activation key'| trans,
-                        'input_prefix' : 'C -',
-                        'hint': 'Activation keys are 13 letters and numbers long and start with a C<br/>For example, C-AB12 CD34 EF56 <br/><br/> You do not need to enter the C-'| trans,
-                        'attr' : {'class': 'govuk-input--width-20', 'label_class': 'govuk-label--m'} }) }}
-
-                    <details class="govuk-details" data-module="govuk-details" data-gaEventType="onClick" data-gaAction="Details" data-gaCategory="Activation Key" data-gaLabel="Where to find your activation key">
-                        <summary class="govuk-details__summary" >
-                            <span class="govuk-details__summary-text">
-                                {% trans %}Where to find your activation key{% endtrans %}
-                            </span>
-                        </summary>
-                        <div class="govuk-details__text">
-                            <p>{% trans %}Your activation key is printed on the letter that told you the <abbr title="lasting power of attorney">LPA</abbr> had been registered. The donor and each attorney will have their own unique activation key.{% endtrans %}</p>
-                            <p>{% trans %}If you cannot find it, please call us:{% endtrans %}</p>
-                            {{ include('@partials/contact-details/telephone.html.twig', {heading_level: 2 }) }}
-                        </div>
-                    </details>
-
-                    {{ govuk_form_fieldset(form.get('dob'), {
-                        'label': 'Your date of birth'| trans,
-                        'hint': 'For example, 31 03 1980'| trans,
-                        'attr': {'class': 'xyz', 'label_class': 'govuk-label--m'} }) }}
-
                     {{ govuk_form_element(form.get('reference_number'), {
-                        'label': 'LPA reference number'| trans,
                         'hint': 'LPA reference numbers are 12 numbers long<br/>For example, 7000-0000-0000'| trans,
                         'attr' : {'class': 'govuk-input--width-20', 'label_class': 'govuk-label--m'},
                     }) }}
