--- a/service-front/app/src/Common/templates/partials/flash-message.html.twig
+++ b/service-front/app/src/Common/templates/partials/flash-message.html.twig
@@ -1,10 +1,14 @@
 {% if flash.getFlash(constant(flash_key)) %}
-    <div class="govuk-grid-row lpa-flash__box govuk-!-margin-top-2">
-        <div class="lpa-flash__container">
-            <svg class="lpa-flash__icon" role="presentation" focusable="false" xmlns="http://www.w3.org/2000/svg">
-                <path d="M25,6.2L8.7,23.2L0,14.1l4-4.2l4.7,4.9L21,2L25,6.2z"></path>
-            </svg>
-            <p class="lpa-flash__message govuk-body">{{ flash.getFlash(constant(flash_key)) }}</p>
+    <div class="govuk-notification-banner govuk-notification-banner--success" role="alert" aria-labelledby="govuk-notification-banner-title" data-module="govuk-notification-banner">
+        <div class="govuk-notification-banner__header">
+            <h2 class="govuk-notification-banner__title" id="govuk-notification-banner-title">
+                Success
+            </h2>
+        </div>
+        <div class="govuk-notification-banner__content">
+            <p class="govuk-notification-banner__heading">
+                You’ve set your cookie preferences. <a class="govuk-notification-banner__link" href="{{ flash.getFlash(constant(flash_key)) }}">Go back to the page you were looking at</a>.
+            </p>
         </div>
     </div>
 {% endif %}
