--- a/service-front/app/src/Common/templates/common/cookies.html.twig
+++ b/service-front/app/src/Common/templates/common/cookies.html.twig
@@ -11,6 +11,10 @@
             <a class="govuk-link govuk-back-link" id="back-link-navigation" href="{{ form.get('referer').getValue() }}">{% trans %}Back{% endtrans %}</a>
         </div>
 
+        <div class="govuk-clearfix">
+            {{ include('@partials/welsh-switch.html.twig') }}
+        </div>
+        
         <main class="govuk-main-wrapper" id="main-content" role="main">
             {{ include('@partials/flash-message.html.twig', {flash_obj: flash, flash_key:'Common\\Handler\\CookiesPageHandler::COOKIES_SET_FLASH_MSG'}) }}
 
@@ -38,21 +42,21 @@
                 <caption class="govuk-visually-hidden">Essential cookies</caption>
                 <thead class="govuk-table__head">
                 <tr class="govuk-table__row">
-                    <th class="govuk-table__header">Name</th>
-                    <th class="govuk-table__header">Purpose</th>
-                    <th class="govuk-table__header">Expires after</th>
+                    <th class="govuk-table__header">{% trans %}Name{% endtrans %}</th>
+                    <th class="govuk-table__header">{% trans %}Purpose{% endtrans %}</th>
+                    <th class="govuk-table__header">{% trans %}Expires after{% endtrans %}</th>
                 </tr>
                 </thead>
                 <tbody class="govuk-table__body">
                 <tr class="govuk-table__row">
-                    <td class="govuk-table__cell">cookie_policy</td>
-                    <td class="govuk-table__cell">Saves your cookie consent settings</td>
-                    <td class="govuk-table__cell">1 year</td>
+                    <td class="govuk-table__cell">{% trans %}cookie_policy{% endtrans %}</td>
+                    <td class="govuk-table__cell">{% trans %}Saves your cookie consent settings{% endtrans %}</td>
+                    <td class="govuk-table__cell">{% trans %}1 year{% endtrans %}</td>
                 </tr>
                 <tr class="govuk-table__row">
-                    <td class="govuk-table__cell">session</td>
-                    <td class="govuk-table__cell">Used to keep you signed in and to remember your progress through the service</td>
-                    <td class="govuk-table__cell">24 hours</td>
+                    <td class="govuk-table__cell">{% trans %}session{% endtrans %}</td>
+                    <td class="govuk-table__cell">{% trans %}Used to remember your progress through the service{% endtrans %}</td>
+                    <td class="govuk-table__cell">{% trans %}24 hours{% endtrans %}</td>
                 </tr>
                 </tbody>
             </table>
@@ -100,21 +104,21 @@
                 <caption class="govuk-visually-hidden">Analytics cookies</caption>
                 <thead class="govuk-table__head">
                 <tr class="govuk-table__row">
-                    <th class="govuk-table__header">Name</th>
-                    <th class="govuk-table__header">Purpose</th>
-                    <th class="govuk-table__header">Expires</th>
+                    <th class="govuk-table__header">{% trans %}Name{% endtrans %}</th>
+                    <th class="govuk-table__header">{% trans %}Purpose{% endtrans %}</th>
+                    <th class="govuk-table__header">{% trans %}Expires{% endtrans %}</th>
                 </tr>
                 </thead>
                 <tbody class="govuk-table__body">
                 <tr class="govuk-table__row">
-                    <td class="govuk-table__cell">_ga</td>
-                    <td class="govuk-table__cell">Checks if you’ve visited the service before. This helps us count how many people visit the service.</td>
-                    <td class="govuk-table__cell">2 years</td>
+                    <td class="govuk-table__cell">{% trans %}_ga{% endtrans %}</td>
+                    <td class="govuk-table__cell">{% trans %}Checks if you’ve visited the service before. This helps us count how many people visit the service.{% endtrans %}</td>
+                    <td class="govuk-table__cell">{% trans %}2 years{% endtrans %}</td>
                 </tr>
                 <tr class="govuk-table__row">
-                    <td class="govuk-table__cell">_gid</td>
-                    <td class="govuk-table__cell">Tells us how you got to the service and how you use it. This helps us understand how well the service is working.</td>
-                    <td class="govuk-table__cell">24 hours</td>
+                    <td class="govuk-table__cell">{% trans %}_gid{% endtrans %}</td>
+                    <td class="govuk-table__cell">{% trans %}Tells us how you got to the service and how you use it. This helps us understand how well the service is working.{% endtrans %}</td>
+                    <td class="govuk-table__cell">{% trans %}24 hours{% endtrans %}</td>
                 </tr>
                 </tbody>
             </table>
