--- a/service-front/app/src/Actor/templates/actor/add-lpa/activation-key.html.twig
+++ b/service-front/app/src/Actor/templates/actor/add-lpa/activation-key.html.twig
@@ -27,7 +27,7 @@
 
                     <p class="govuk-body">{% trans %}The donor and each of the attorneys will have their own activation key. The activation key and date of birth must be for the same person.{% endtrans %}</p>
 
-                    {{ govuk_form_element(form.get('passcode'), {
+                    {{ govuk_form_element(form.get('activation_key'), {
                         'label': 'Your activation key'| trans,
                         'input_prefix' : 'C -',
                         'hint': 'Activation keys are 13 letters and numbers long and start with a C<br/>For example, C-AB12 CD34 EF56 <br/><br/> You do not need to enter the C-'| trans,
