fix lint errors

--- a/service-front/app/src/Actor/templates/actor/password-reset-request.html.twig
+++ b/service-front/app/src/Actor/templates/actor/password-reset-request.html.twig
@@ -16,7 +16,7 @@
 
                 {{ govuk_error_summary(form) }}
 
-                <form method="post" name="create_account">
+                <form method="post" name="create_account" novalidate>
                     <fieldset class="govuk-fieldset">
 
                         <legend class="govuk-fieldset__legend govuk-fieldset__legend--xl">
@@ -29,7 +29,7 @@
 
                         <input type="hidden" name="__csrf" value="{{ form.get('__csrf').value }}">
 
-                        {{ govuk_form_element(form.get('email'), { 'label': 'Email address'|trans, 'attr': { 'class': 'govuk-!-width-two-thirds' } }) }}
+                        {{ govuk_form_element(form.get('email'), { 'label': 'Email address'|trans, 'attr': { 'class': 'govuk-!-width-two-thirds'} }) }}
 
                         {{ govuk_form_element(form.get('email_confirm'), { 'label': 'Confirm your email address'|trans, 'attr': { 'class': 'govuk-!-width-two-thirds' } }) }}
 
