UML-2031: Content changes applied for reset password (#1487)
* content changes applied for reset password, welsh translations pending

* lint errors fixed

* Delete logout.go

--- a/service-front/app/src/Actor/templates/actor/password-reset-request-done.html.twig
+++ b/service-front/app/src/Actor/templates/actor/password-reset-request-done.html.twig
@@ -14,17 +14,12 @@
     <main class="govuk-main-wrapper" id="main-content" role="main">
         <div class="govuk-grid-row">
             <div class="govuk-grid-column-two-thirds">
-
-                <h1 class="govuk-heading-xl">{% trans %}Updating your password{% endtrans %}</h1>
-
-                <p class="govuk-body-l">{% trans with {'%email%': email } %}We've emailed a link to <strong class="govuk-!-font-weight-bold">%email%</strong> so that you can reset your password.{% endtrans %}</p>
-
-                <p class="govuk-body">{% trans %}
-                        If you have not received the email within a few minutes, please check your spam, bulk or junk email folder &mdash; your email system may have blocked it by mistake.{% endtrans %}
-                </p>
-
-                <p class="govuk-body">{% trans %}
-                        If it does not arrive at all, please check that you've given us the correct email address for your existing <abbr title="lasting power of attorney">LPA</abbr> account &mdash; we'll only send a password reset link to the email address belonging to an account.{% endtrans %}
+                <h1 class="govuk-heading-xl">{% trans %}Resetting your password{% endtrans %}</h1>
+                <p class="govuk-body-l">{% trans with {'%email%': email } %}We've emailed a link to <strong class="govuk-!-font-weight-bold">%email%</strong> so that you can reset your password for your Use a lasting power of attorney account.{% endtrans %}</p>
+                <p class="govuk-body">
+                    {% trans %}
+                        If you have not received an email within a few minutes, please check your spam, bulk or junk email folder &mdash; your email system may have blocked it by mistake. If there’s no account with this email address we’ll also let you know.
+                    {% endtrans %}
                 </p>
             </div>
         </div>
