add tests and welsh

--- a/service-front/app/src/Actor/templates/actor/form-error-messages.html.twig
+++ b/service-front/app/src/Actor/templates/actor/form-error-messages.html.twig
@@ -59,6 +59,7 @@
 {% trans %}Enter the donor's first names{% context %}error{% notes %}Add Older LPA{% endtrans %}
 {% trans %}Enter the donor's last name{% context %}error{% notes %}Add Older LPA{% endtrans %}
 {% trans %}Enter the donor's date of birth{% context %}error{% notes %}Add Older LPA{% endtrans %}
+{% trans %}Enter your address on the paper LPA{% context %}error{% notes %}Additional information{% endtrans %}
 
 {# Create viewer code #}
 {% trans %}Enter an organisation name{% context %}error{% notes %}Create viewer code{% endtrans %}
