default cookie banner as hidden

--- a/service-front/app/src/Common/templates/layout/default.html.twig
+++ b/service-front/app/src/Common/templates/layout/default.html.twig
@@ -49,7 +49,7 @@
 {% endif %}
 
 <form>
-    <div class="govuk-cookie-banner " data-nosnippet role="region" aria-label="Cookies on {{ service_name }}">
+    <div class="govuk-cookie-banner " data-nosnippet role="region" aria-label="Cookies on {{ service_name }}" hidden>
         <div class="govuk-cookie-banner__message govuk-width-container">
 
             <div class="govuk-grid-row">
